[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
eframe = "0.27.2"
egui_commonmark = { version = "0.16.1", features = ["macros", "better_syntax_highlighting"] }
global-hotkey = "0.5.4"
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
ureq = { version = "2.9.7", features = ["json"] }
